--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainCommander/traincommanderunit.lfm
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainCommander/traincommanderunit.lfm
@@ -1,7 +1,7 @@
 object FormTrainCommander: TFormTrainCommander
-  Left = 224
+  Left = 318
   Height = 565
-  Top = 133
+  Top = 141
   Width = 1181
   Align = alBottom
   Caption = 'Train Commander'
@@ -11,7 +11,7 @@ object FormTrainCommander: TFormTrainCommander
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   OnShow = FormShow
-  LCLVersion = '2.2.0.4'
+  LCLVersion = '2.2.2.0'
   object PanelDetails: TPanel
     Left = 0
     Height = 120
@@ -23,9 +23,9 @@ object FormTrainCommander: TFormTrainCommander
     TabOrder = 0
     object CheckBoxAutoConnect: TCheckBox
       Left = 192
-      Height = 18
+      Height = 24
       Top = 8
-      Width = 156
+      Width = 185
       Caption = 'AutoConnect at Startup'
       TabOrder = 0
     end
@@ -49,9 +49,9 @@ object FormTrainCommander: TFormTrainCommander
     end
     object CheckBoxLoopBackIP: TCheckBox
       Left = 192
-      Height = 18
+      Height = 24
       Top = 24
-      Width = 67
+      Width = 78
       Caption = 'Local IP'
       TabOrder = 3
     end
@@ -62,6 +62,7 @@ object FormTrainCommander: TFormTrainCommander
       Width = 66
       AutoSize = False
       Caption = 'NodeID'
+      ParentColor = False
     end
     object LabelAliasIDCaption: TLabel
       Left = 17
@@ -70,6 +71,7 @@ object FormTrainCommander: TFormTrainCommander
       Width = 65
       AutoSize = False
       Caption = 'AliasID'
+      ParentColor = False
     end
     object LabelNodeID: TLabel
       Left = 96
@@ -77,6 +79,7 @@ object FormTrainCommander: TFormTrainCommander
       Top = 72
       Width = 143
       AutoSize = False
+      ParentColor = False
     end
     object LabelAliasID: TLabel
       Left = 96
@@ -84,12 +87,13 @@ object FormTrainCommander: TFormTrainCommander
       Top = 93
       Width = 147
       AutoSize = False
+      ParentColor = False
     end
     object CheckBoxLogMessages: TCheckBox
       Left = 440
-      Height = 18
+      Height = 24
       Top = 72
-      Width = 104
+      Width = 120
       Caption = 'Log Messages'
       Checked = True
       State = cbChecked
@@ -97,9 +101,9 @@ object FormTrainCommander: TFormTrainCommander
     end
     object CheckBoxUseSyncronize: TCheckBox
       Left = 384
-      Height = 18
+      Height = 24
       Top = 8
-      Width = 192
+      Width = 221
       Caption = 'Use Syncronize in the threads'
       Checked = True
       State = cbChecked
@@ -107,13 +111,12 @@ object FormTrainCommander: TFormTrainCommander
     end
     object ComboBoxComPorts: TComboBox
       Left = 376
-      Height = 20
+      Height = 31
       Top = 47
       Width = 284
-      ItemHeight = 26
+      ItemHeight = 0
       Style = csDropDownList
       TabOrder = 6
-      Text = '0'
     end
     object ButtonManualConnectComPort: TButton
       Left = 256
@@ -135,9 +138,9 @@ object FormTrainCommander: TFormTrainCommander
     end
     object CheckBoxDetailedLog: TCheckBox
       Left = 443
-      Height = 18
+      Height = 24
       Top = 93
-      Width = 94
+      Width = 111
       Caption = 'Detailed Log'
       ParentShowHint = False
       ShowHint = True
@@ -163,9 +166,9 @@ object FormTrainCommander: TFormTrainCommander
     end
     object CheckBox1: TCheckBox
       Left = 384
-      Height = 18
+      Height = 24
       Top = 24
-      Width = 175
+      Width = 204
       Caption = 'Allow Python Script To Run'
       Checked = True
       OnChange = CheckBox1Change
@@ -176,7 +179,7 @@ object FormTrainCommander: TFormTrainCommander
   object PanelConnections: TPanel
     Left = 0
     Height = 102
-    Top = 445
+    Top = 442
     Width = 1181
     Align = alBottom
     ClientHeight = 102
@@ -191,7 +194,7 @@ object FormTrainCommander: TFormTrainCommander
       Columns = <      
         item
           Caption = 'Server'
-          Width = 1000
+          Width = 1177
         end>
       LargeImages = ImageListMain
       ScrollBars = ssAutoBoth
@@ -204,45 +207,45 @@ object FormTrainCommander: TFormTrainCommander
     Cursor = crVSplit
     Left = 0
     Height = 9
-    Top = 337
+    Top = 334
     Width = 1181
     Align = alBottom
     ResizeAnchor = akBottom
   end
   object SplitterTrains: TSplitter
     Left = 267
-    Height = 217
+    Height = 214
     Top = 120
     Width = 5
   end
   object StatusBarMain: TStatusBar
     Left = 0
-    Height = 18
-    Top = 547
+    Height = 21
+    Top = 544
     Width = 1181
     Panels = <    
       item
-        Width = 350
+        Width = 420
       end    
       item
-        Width = 350
+        Width = 420
       end    
       item
-        Width = 350
+        Width = 420
       end    
       item
-        Width = 350
+        Width = 420
       end>
     SimplePanel = False
   end
   object PanelTrains: TPanel
     Left = 0
-    Height = 217
+    Height = 214
     Top = 120
     Width = 267
     Align = alLeft
     Caption = 'PanelTrains'
-    ClientHeight = 217
+    ClientHeight = 214
     ClientWidth = 267
     TabOrder = 5
     object PanelTrainsHeader: TPanel
@@ -268,7 +271,7 @@ object FormTrainCommander: TFormTrainCommander
     end
     object TreeViewTrains: TTreeView
       Left = 1
-      Height = 192
+      Height = 189
       Top = 24
       Width = 265
       Align = alClient
@@ -278,7 +281,7 @@ object FormTrainCommander: TFormTrainCommander
   end
   object MemoLog: TMemo
     Left = 272
-    Height = 217
+    Height = 214
     Top = 120
     Width = 909
     Align = alClient
@@ -288,7 +291,7 @@ object FormTrainCommander: TFormTrainCommander
   object MemoComPort: TMemo
     Left = 0
     Height = 90
-    Top = 346
+    Top = 343
     Width = 1181
     Align = alBottom
     Lines.Strings = (
@@ -301,7 +304,7 @@ object FormTrainCommander: TFormTrainCommander
     Cursor = crVSplit
     Left = 0
     Height = 9
-    Top = 436
+    Top = 433
     Width = 1181
     Align = alBottom
     ResizeAnchor = akBottom
