--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainCommander/traincommanderunit.lfm
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainCommander/traincommanderunit.lfm
@@ -1,12 +1,12 @@
 object FormTrainCommander: TFormTrainCommander
-  Left = 318
+  Left = 557
   Height = 565
   Top = 141
-  Width = 1181
+  Width = 1241
   Align = alBottom
   Caption = 'Train Commander'
   ClientHeight = 565
-  ClientWidth = 1181
+  ClientWidth = 1241
   OnCloseQuery = FormCloseQuery
   OnCreate = FormCreate
   OnDestroy = FormDestroy
@@ -16,16 +16,16 @@ object FormTrainCommander: TFormTrainCommander
     Left = 0
     Height = 120
     Top = 0
-    Width = 1181
+    Width = 1241
     Align = alTop
     ClientHeight = 120
-    ClientWidth = 1181
+    ClientWidth = 1241
     TabOrder = 0
     object CheckBoxAutoConnect: TCheckBox
       Left = 192
-      Height = 24
+      Height = 18
       Top = 8
-      Width = 185
+      Width = 156
       Caption = 'AutoConnect at Startup'
       TabOrder = 0
     end
@@ -49,9 +49,9 @@ object FormTrainCommander: TFormTrainCommander
     end
     object CheckBoxLoopBackIP: TCheckBox
       Left = 192
-      Height = 24
+      Height = 18
       Top = 24
-      Width = 78
+      Width = 67
       Caption = 'Local IP'
       TabOrder = 3
     end
@@ -91,9 +91,9 @@ object FormTrainCommander: TFormTrainCommander
     end
     object CheckBoxLogMessages: TCheckBox
       Left = 440
-      Height = 24
+      Height = 18
       Top = 72
-      Width = 120
+      Width = 104
       Caption = 'Log Messages'
       Checked = True
       State = cbChecked
@@ -101,9 +101,9 @@ object FormTrainCommander: TFormTrainCommander
     end
     object CheckBoxUseSyncronize: TCheckBox
       Left = 384
-      Height = 24
+      Height = 18
       Top = 8
-      Width = 221
+      Width = 192
       Caption = 'Use Syncronize in the threads'
       Checked = True
       State = cbChecked
@@ -111,12 +111,13 @@ object FormTrainCommander: TFormTrainCommander
     end
     object ComboBoxComPorts: TComboBox
       Left = 376
-      Height = 31
+      Height = 20
       Top = 47
       Width = 284
-      ItemHeight = 0
+      ItemHeight = 26
       Style = csDropDownList
       TabOrder = 6
+      Text = '0'
     end
     object ButtonManualConnectComPort: TButton
       Left = 256
@@ -138,9 +139,9 @@ object FormTrainCommander: TFormTrainCommander
     end
     object CheckBoxDetailedLog: TCheckBox
       Left = 443
-      Height = 24
+      Height = 18
       Top = 93
-      Width = 111
+      Width = 94
       Caption = 'Detailed Log'
       ParentShowHint = False
       ShowHint = True
@@ -166,30 +167,39 @@ object FormTrainCommander: TFormTrainCommander
     end
     object CheckBox1: TCheckBox
       Left = 384
-      Height = 24
+      Height = 18
       Top = 24
-      Width = 204
+      Width = 175
       Caption = 'Allow Python Script To Run'
       Checked = True
       OnChange = CheckBox1Change
       State = cbChecked
       TabOrder = 12
     end
+    object ToggleBoxServerForm: TToggleBox
+      Left = 760
+      Height = 25
+      Top = 87
+      Width = 146
+      Caption = 'Show Server Form'
+      OnChange = ToggleBoxServerFormChange
+      TabOrder = 13
+    end
   end
   object PanelConnections: TPanel
     Left = 0
     Height = 102
-    Top = 442
-    Width = 1181
+    Top = 445
+    Width = 1241
     Align = alBottom
     ClientHeight = 102
-    ClientWidth = 1181
+    ClientWidth = 1241
     TabOrder = 1
     object ListviewConnections: TListView
       Left = 1
       Height = 100
       Top = 1
-      Width = 1179
+      Width = 1239
       Align = alClient
       Columns = <      
         item
@@ -207,22 +217,22 @@ object FormTrainCommander: TFormTrainCommander
     Cursor = crVSplit
     Left = 0
     Height = 9
-    Top = 334
-    Width = 1181
+    Top = 337
+    Width = 1241
     Align = alBottom
     ResizeAnchor = akBottom
   end
   object SplitterTrains: TSplitter
     Left = 267
-    Height = 214
+    Height = 217
     Top = 120
     Width = 5
   end
   object StatusBarMain: TStatusBar
     Left = 0
-    Height = 21
-    Top = 544
-    Width = 1181
+    Height = 18
+    Top = 547
+    Width = 1241
     Panels = <    
       item
         Width = 420
@@ -240,12 +250,12 @@ object FormTrainCommander: TFormTrainCommander
   end
   object PanelTrains: TPanel
     Left = 0
-    Height = 214
+    Height = 217
     Top = 120
     Width = 267
     Align = alLeft
     Caption = 'PanelTrains'
-    ClientHeight = 214
+    ClientHeight = 217
     ClientWidth = 267
     TabOrder = 5
     object PanelTrainsHeader: TPanel
@@ -271,7 +281,7 @@ object FormTrainCommander: TFormTrainCommander
     end
     object TreeViewTrains: TTreeView
       Left = 1
-      Height = 189
+      Height = 192
       Top = 24
       Width = 265
       Align = alClient
@@ -281,9 +291,9 @@ object FormTrainCommander: TFormTrainCommander
   end
   object MemoLog: TMemo
     Left = 272
-    Height = 214
+    Height = 217
     Top = 120
-    Width = 909
+    Width = 969
     Align = alClient
     ScrollBars = ssVertical
     TabOrder = 6
@@ -291,8 +301,8 @@ object FormTrainCommander: TFormTrainCommander
   object MemoComPort: TMemo
     Left = 0
     Height = 90
-    Top = 343
-    Width = 1181
+    Top = 346
+    Width = 1241
     Align = alBottom
     Lines.Strings = (
       'MemoComPort'
@@ -304,8 +314,8 @@ object FormTrainCommander: TFormTrainCommander
     Cursor = crVSplit
     Left = 0
     Height = 9
-    Top = 433
-    Width = 1181
+    Top = 436
+    Width = 1241
     Align = alBottom
     ResizeAnchor = akBottom
   end
