--- a/Projects/Smart Mobile/SMS Throttle/Delphi/LccThrottleApp/FormLccThrottleApp.fmx
+++ b/Projects/Smart Mobile/SMS Throttle/Delphi/LccThrottleApp/FormLccThrottleApp.fmx
@@ -1,6 +1,7 @@
 object LccThrottleAppForm: TLccThrottleAppForm
   Left = 0
   Top = 0
+  ActiveControl = TabItem2
   Caption = 'Form56'
   ClientHeight = 536
   ClientWidth = 405
@@ -22,7 +23,7 @@ object LccThrottleAppForm: TLccThrottleAppForm
     Size.Height = 536.000000000000000000
     Size.PlatformDefault = False
     TabHeight = 49.000000000000000000
-    TabIndex = 3
+    TabIndex = 1
     TabOrder = 0
     TabPosition = PlatformDefault
     Sizes = (
@@ -47,119 +48,153 @@ object LccThrottleAppForm: TLccThrottleAppForm
       Text = 'TabItem1'
       ExplicitSize.cx = 101.000000000000000000
       ExplicitSize.cy = 49.000000000000000000
-      object TabControl2: TTabControl
-        Touch.GestureManager = GestureManager1
-        OnGesture = GestureDone
+      object Layout1: TLayout
         Align = Client
-        FullSize = True
         Size.Width = 405.000000000000000000
-        Size.Height = 487.000000000000000000
+        Size.Height = 439.000000000000000000
         Size.PlatformDefault = False
-        TabHeight = 49.000000000000000000
-        TabIndex = 0
-        TabOrder = 0
-        TabPosition = None
-        Sizes = (
-          405s
-          487s
-          405s
-          487s)
-        object TabItem5: TTabItem
-          CustomIcon = <
-            item
-            end>
-          IsSelected = True
-          Size.Width = 8.000000000000000000
-          Size.Height = 8.000000000000000000
+        TabOrder = 1
+        object MultiViewConsist: TMultiView
+          MasterButton = SpeedButtonTab2Hamburger
+          NavigationPaneOptions.CollapsedWidth = 153.000000000000000000
+          OnHidden = MultiViewConsistHidden
+          Size.Width = 250.000000000000000000
+          Size.Height = 50.000000000000000000
           Size.PlatformDefault = False
-          StyleLookup = ''
-          TabOrder = 0
-          Text = 'TabItem5'
-          ExplicitSize.cx = 8.000000000000000000
-          ExplicitSize.cy = 8.000000000000000000
-          object ToolBar1: TToolBar
-            Size.Width = 405.000000000000000000
-            Size.Height = 48.000000000000000000
+          TabOrder = 1
+          object TabControlTrainRoster: TTabControl
+            Align = Client
+            Size.Width = 153.000000000000000000
+            Size.Height = 439.000000000000000000
             Size.PlatformDefault = False
+            TabIndex = 2
             TabOrder = 0
-            object lblTitle1: TLabel
-              Align = Contents
-              Size.Width = 405.000000000000000000
-              Size.Height = 48.000000000000000000
+            TabPosition = PlatformDefault
+            Sizes = (
+              153s
+              413s
+              153s
+              413s
+              153s
+              413s)
+            object TabItemTrainRosterSelect: TTabItem
+              CustomIcon = <
+                item
+                end>
+              IsSelected = False
+              Size.Width = 54.000000000000000000
+              Size.Height = 26.000000000000000000
               Size.PlatformDefault = False
-              StyleLookup = 'toollabel'
-              TextSettings.HorzAlign = Center
-              Text = 'Title'
+              StyleLookup = ''
+              TabOrder = 0
+              Text = 'Roster'
+              ExplicitSize.cx = 54.000000000000000000
+              ExplicitSize.cy = 26.000000000000000000
+              object ListViewTrainRoster: TListView
+                ItemAppearanceClassName = 'TListItemAppearance'
+                ItemEditAppearanceClassName = 'TListItemDeleteAppearance'
+                HeaderAppearanceClassName = 'TListHeaderObjects'
+                FooterAppearanceClassName = 'TListHeaderObjects'
+                Align = Client
+                Size.Width = 153.000000000000000000
+                Size.Height = 413.000000000000000000
+                Size.PlatformDefault = False
+                TabOrder = 0
+                ItemAppearanceObjects.ItemObjects.Accessory.AccessoryType = Detail
+                OnItemClickEx = ListViewTrainRosterItemClickEx
+                SearchVisible = True
+              end
             end
-            object btnNext: TSpeedButton
-              Action = NextTabAction1
-              Align = Right
-              Enabled = True
-              ImageIndex = -1
-              Margins.Right = 5.000000000000000000
-              Position.X = 340.000000000000000000
-              Size.Width = 60.000000000000000000
-              Size.Height = 48.000000000000000000
+            object TabItemTrainRosterDetails: TTabItem
+              CustomIcon = <
+                item
+                end>
+              IsSelected = False
+              Size.Width = 56.000000000000000000
+              Size.Height = 26.000000000000000000
               Size.PlatformDefault = False
+              StyleLookup = ''
+              TabOrder = 0
+              Text = 'Details'
+              ExplicitSize.cx = 56.000000000000000000
+              ExplicitSize.cy = 26.000000000000000000
+              object ListBoxTrainRoster: TListBox
+                Align = Client
+                Size.Width = 153.000000000000000000
+                Size.Height = 373.000000000000000000
+                Size.PlatformDefault = False
+                TabOrder = 0
+                DisableFocusEffect = True
+                DefaultItemStyles.ItemStyle = ''
+                DefaultItemStyles.GroupHeaderStyle = ''
+                DefaultItemStyles.GroupFooterStyle = ''
+                Viewport.Width = 149.000000000000000000
+                Viewport.Height = 369.000000000000000000
+              end
+              object ToolBarTrainRosterDetails: TToolBar
+                Size.Width = 153.000000000000000000
+                Size.Height = 40.000000000000000000
+                Size.PlatformDefault = False
+                TabOrder = 1
+                object LabelTrainRosterHeader: TLabel
+                  Align = Client
+                  Size.Width = 153.000000000000000000
+                  Size.Height = 40.000000000000000000
+                  Size.PlatformDefault = False
+                  TextSettings.HorzAlign = Center
+                  Text = 'Train Details'
+                  TabOrder = 0
+                  object SpeedButtonTrainRosterBack: TSpeedButton
+                    Align = Left
+                    Size.Width = 33.000000000000000000
+                    Size.Height = 40.000000000000000000
+                    Size.PlatformDefault = False
+                    StyleLookup = 'arrowlefttoolbutton'
+                    Text = 'SpeedButtonTrainRosterBack'
+                    OnClick = SpeedButtonTrainRosterBackClick
+                  end
+                end
+              end
             end
-          end
-        end
-        object TabItem6: TTabItem
-          CustomIcon = <
-            item
-            end>
-          IsSelected = False
-          Size.Width = 8.000000000000000000
-          Size.Height = 8.000000000000000000
-          Size.PlatformDefault = False
-          StyleLookup = ''
-          TabOrder = 0
-          Text = 'TabItem6'
-          ExplicitSize.cx = 8.000000000000000000
-          ExplicitSize.cy = 8.000000000000000000
-          object ToolBar2: TToolBar
-            Size.Width = 405.000000000000000000
-            Size.Height = 48.000000000000000000
-            Size.PlatformDefault = False
-            TabOrder = 0
-            object lblTitle2: TLabel
-              Align = Contents
-              Size.Width = 405.000000000000000000
-              Size.Height = 48.000000000000000000
+            object TabItemTrainRosterEdit: TTabItem
+              CustomIcon = <
+                item
+                end>
+              IsSelected = True
+              Size.Width = 41.000000000000000000
+              Size.Height = 26.000000000000000000
               Size.PlatformDefault = False
-              StyleLookup = 'toollabel'
-              TextSettings.HorzAlign = Center
-              Text = 'Title'
-            end
-            object btnBack: TSpeedButton
-              Action = PreviousTabAction1
-              Align = Left
-              Enabled = True
-              ImageIndex = -1
-              Margins.Left = 5.000000000000000000
-              Position.X = 5.000000000000000000
-              Size.Width = 67.000000000000000000
-              Size.Height = 48.000000000000000000
-              Size.PlatformDefault = False
-              StyleLookup = 'backtoolbutton'
+              StyleLookup = ''
+              TabOrder = 0
+              Text = 'Edit'
+              object ToolBarTrainRosterEdit: TToolBar
+                Size.Width = 153.000000000000000000
+                Size.Height = 40.000000000000000000
+                Size.PlatformDefault = False
+                TabOrder = 1
+                object LabelTrainRosterEdit: TLabel
+                  Align = Client
+                  Size.Width = 153.000000000000000000
+                  Size.Height = 40.000000000000000000
+                  Size.PlatformDefault = False
+                  TextSettings.HorzAlign = Center
+                  Text = 'Edit Train Info'
+                  TabOrder = 0
+                  object SpeedButtonTrainRosterEdit: TSpeedButton
+                    Align = Left
+                    Size.Width = 33.000000000000000000
+                    Size.Height = 40.000000000000000000
+                    Size.PlatformDefault = False
+                    StyleLookup = 'arrowlefttoolbutton'
+                    Text = 'SpeedButtonTrainRosterBack'
+                    OnClick = SpeedButtonTrainRosterBackClick
+                  end
+                end
+              end
             end
           end
         end
       end
-    end
-    object TabItem2: TTabItem
-      CustomIcon = <
-        item
-        end>
-      IsSelected = False
-      Size.Width = 100.000000000000000000
-      Size.Height = 49.000000000000000000
-      Size.PlatformDefault = False
-      StyleLookup = 'tabitemcontacts'
-      TabOrder = 0
-      Text = 'TabItem2'
-      ExplicitSize.cx = 102.000000000000000000
-      ExplicitSize.cy = 49.000000000000000000
       object ToolBar3: TToolBar
         Size.Width = 405.000000000000000000
         Size.Height = 48.000000000000000000
@@ -183,24 +218,49 @@ object LccThrottleAppForm: TLccThrottleAppForm
           Text = 'SpeedButtonTab2Hamburger'
         end
       end
-      object MultiViewConsist: TMultiView
-        MasterButton = SpeedButtonTab2Hamburger
-        NavigationPaneOptions.CollapsedWidth = 153.000000000000000000
-        Size.Width = 250.000000000000000000
-        Size.Height = 50.000000000000000000
+    end
+    object TabItem2: TTabItem
+      CustomIcon = <
+        item
+        end>
+      IsSelected = True
+      Size.Width = 100.000000000000000000
+      Size.Height = 49.000000000000000000
+      Size.PlatformDefault = False
+      StyleLookup = 'tabitemcontacts'
+      TabOrder = 0
+      Text = 'TabItem2'
+      ExplicitSize.cx = 102.000000000000000000
+      ExplicitSize.cy = 49.000000000000000000
+      object LayoutLog: TLayout
+        Align = Client
+        Size.Width = 405.000000000000000000
+        Size.Height = 487.000000000000000000
         Size.PlatformDefault = False
-        TabOrder = 1
-        object ListView1: TListView
-          ItemAppearanceClassName = 'TListItemAppearance'
-          ItemEditAppearanceClassName = 'TListItemShowCheckAppearance'
-          HeaderAppearanceClassName = 'TListHeaderObjects'
-          FooterAppearanceClassName = 'TListHeaderObjects'
-          Align = Client
-          Size.Width = 153.000000000000000000
-          Size.Height = 439.000000000000000000
+        TabOrder = 0
+        object HeaderLogHeader: THeader
+          Sides = [Top, Left, Bottom, Right]
+          Align = Top
+          Size.Width = 405.000000000000000000
+          Size.Height = 50.000000000000000000
           Size.PlatformDefault = False
           TabOrder = 0
-          SearchVisible = True
+          object LabelLogHeader: TLabel
+            Align = Client
+            Text = 'Logging'
+            TabOrder = 1
+          end
+        end
+        object MemoLog: TMemo
+          Touch.InteractiveGestures = [Pan, LongTap, DoubleTap]
+          DataDetectorTypes = []
+          Align = Client
+          Size.Width = 405.000000000000000000
+          Size.Height = 437.000000000000000000
+          Size.PlatformDefault = False
+          TabOrder = 1
+          Viewport.Width = 401.000000000000000000
+          Viewport.Height = 433.000000000000000000
         end
       end
     end
@@ -237,7 +297,7 @@ object LccThrottleAppForm: TLccThrottleAppForm
       CustomIcon = <
         item
         end>
-      IsSelected = True
+      IsSelected = False
       Size.Width = 103.000000000000000000
       Size.Height = 49.000000000000000000
       Size.PlatformDefault = False
@@ -475,16 +535,6 @@ object LccThrottleAppForm: TLccThrottleAppForm
           item
             GestureID = sgiRight
           end>
-      end
-      item
-        Control = TabControl2
-        Collection = <
-          item
-            GestureID = sgiLeft
-          end
-          item
-            GestureID = sgiRight
-          end>
       end>
   end
   object ActionList1: TActionList
@@ -492,11 +542,17 @@ object LccThrottleAppForm: TLccThrottleAppForm
     Top = 360
     object NextTabAction1: TNextTabAction
       Category = 'Tab'
-      TabControl = TabControl2
     end
     object PreviousTabAction1: TPreviousTabAction
       Category = 'Tab'
-      TabControl = TabControl2
+    end
+    object ActionTrainRosterTabNext: TNextTabAction
+      Category = 'Tab'
+      TabControl = TabControlTrainRoster
+    end
+    object ActionTrainRosterTabPrev: TPreviousTabAction
+      Category = 'Tab'
+      TabControl = TabControlTrainRoster
     end
   end
 end
