--- a/Projects/Smart Mobile/SMS Throttle/Delphi/LccThrottleApp/FormLccThrottleApp.fmx
+++ b/Projects/Smart Mobile/SMS Throttle/Delphi/LccThrottleApp/FormLccThrottleApp.fmx
@@ -1,7 +1,7 @@
 object LccThrottleAppForm: TLccThrottleAppForm
   Left = 0
   Top = 0
-  ActiveControl = TabItem2
+  ActiveControl = TabItem1
   Caption = 'Form56'
   ClientHeight = 536
   ClientWidth = 405
@@ -23,7 +23,7 @@ object LccThrottleAppForm: TLccThrottleAppForm
     Size.Height = 536.000000000000000000
     Size.PlatformDefault = False
     TabHeight = 49.000000000000000000
-    TabIndex = 1
+    TabIndex = 0
     TabOrder = 0
     TabPosition = PlatformDefault
     Sizes = (
@@ -39,7 +39,7 @@ object LccThrottleAppForm: TLccThrottleAppForm
       CustomIcon = <
         item
         end>
-      IsSelected = False
+      IsSelected = True
       Size.Width = 100.000000000000000000
       Size.Height = 49.000000000000000000
       Size.PlatformDefault = False
@@ -56,7 +56,7 @@ object LccThrottleAppForm: TLccThrottleAppForm
         TabOrder = 1
         object MultiViewConsist: TMultiView
           MasterButton = SpeedButtonTab2Hamburger
-          NavigationPaneOptions.CollapsedWidth = 153.000000000000000000
+          NavigationPaneOptions.CollapsedWidth = 190.000000000000000000
           OnHidden = MultiViewConsistHidden
           Size.Width = 250.000000000000000000
           Size.Height = 50.000000000000000000
@@ -64,18 +64,19 @@ object LccThrottleAppForm: TLccThrottleAppForm
           TabOrder = 1
           object TabControlTrainRoster: TTabControl
             Align = Client
-            Size.Width = 153.000000000000000000
+            Size.Width = 190.000000000000000000
             Size.Height = 439.000000000000000000
             Size.PlatformDefault = False
-            TabIndex = 2
+            TabIndex = 1
             TabOrder = 0
             TabPosition = PlatformDefault
+            OnChange = TabControlTrainRosterChange
             Sizes = (
-              153s
+              190s
               413s
-              153s
+              190s
               413s
-              153s
+              190s
               413s)
             object TabItemTrainRosterSelect: TTabItem
               CustomIcon = <
@@ -96,7 +97,7 @@ object LccThrottleAppForm: TLccThrottleAppForm
                 HeaderAppearanceClassName = 'TListHeaderObjects'
                 FooterAppearanceClassName = 'TListHeaderObjects'
                 Align = Client
-                Size.Width = 153.000000000000000000
+                Size.Width = 190.000000000000000000
                 Size.Height = 413.000000000000000000
                 Size.PlatformDefault = False
                 TabOrder = 0
@@ -109,7 +110,7 @@ object LccThrottleAppForm: TLccThrottleAppForm
               CustomIcon = <
                 item
                 end>
-              IsSelected = False
+              IsSelected = True
               Size.Width = 56.000000000000000000
               Size.Height = 26.000000000000000000
               Size.PlatformDefault = False
@@ -118,9 +119,9 @@ object LccThrottleAppForm: TLccThrottleAppForm
               Text = 'Details'
               ExplicitSize.cx = 56.000000000000000000
               ExplicitSize.cy = 26.000000000000000000
-              object ListBoxTrainRoster: TListBox
+              object ListBoxTrainRosterItem: TListBox
                 Align = Client
-                Size.Width = 153.000000000000000000
+                Size.Width = 190.000000000000000000
                 Size.Height = 373.000000000000000000
                 Size.PlatformDefault = False
                 TabOrder = 0
@@ -128,17 +129,78 @@ object LccThrottleAppForm: TLccThrottleAppForm
                 DefaultItemStyles.ItemStyle = ''
                 DefaultItemStyles.GroupHeaderStyle = ''
                 DefaultItemStyles.GroupFooterStyle = ''
-                Viewport.Width = 149.000000000000000000
+                Viewport.Width = 186.000000000000000000
                 Viewport.Height = 369.000000000000000000
+                object ListBoxGroupHeaderTrainDetails: TListBoxGroupHeader
+                  StyleLookup = 'listboxplainheader'
+                  TabOrder = 0
+                  Text = 'Train Node Info'
+                end
+                object ListBoxItem1: TListBoxItem
+                  Position.Y = 19.000000000000000000
+                  Size.Width = 186.000000000000000000
+                  Size.Height = 36.000000000000000000
+                  Size.PlatformDefault = False
+                  StyleLookup = 'listboxitembottomdetail'
+                  TabOrder = 1
+                  Text = 'Manufacturer'
+                end
+                object ListBoxItem3: TListBoxItem
+                  Position.Y = 55.000000000000000000
+                  Size.Width = 186.000000000000000000
+                  Size.Height = 36.000000000000000000
+                  Size.PlatformDefault = False
+                  StyleLookup = 'listboxitembottomdetail'
+                  TabOrder = 2
+                  Text = 'Model Number :'
+                end
+                object ListBoxItem5: TListBoxItem
+                  Position.Y = 91.000000000000000000
+                  Size.Width = 186.000000000000000000
+                  Size.Height = 36.000000000000000000
+                  Size.PlatformDefault = False
+                  StyleLookup = 'listboxitembottomdetail'
+                  TabOrder = 3
+                  Text = 'Software Version :'
+                end
+                object ListBoxItem7: TListBoxItem
+                  Position.Y = 127.000000000000000000
+                  Size.Width = 186.000000000000000000
+                  Size.Height = 36.000000000000000000
+                  Size.PlatformDefault = False
+                  StyleLookup = 'listboxitembottomdetail'
+                  TabOrder = 4
+                  Text = 'Hardware Version :'
+                end
+                object ListBoxItem9: TListBoxItem
+                  ItemData.Accessory = aMore
+                  Position.Y = 163.000000000000000000
+                  Size.Width = 186.000000000000000000
+                  Size.Height = 36.000000000000000000
+                  Size.PlatformDefault = False
+                  StyleLookup = 'listboxitembottomdetail'
+                  TabOrder = 5
+                  Text = 'User Name :'
+                end
+                object ListBoxItem11: TListBoxItem
+                  ItemData.Accessory = aMore
+                  Position.Y = 199.000000000000000000
+                  Size.Width = 186.000000000000000000
+                  Size.Height = 36.000000000000000000
+                  Size.PlatformDefault = False
+                  StyleLookup = 'listboxitembottomdetail'
+                  TabOrder = 6
+                  Text = 'User Description :'
+                end
               end
               object ToolBarTrainRosterDetails: TToolBar
-                Size.Width = 153.000000000000000000
+                Size.Width = 190.000000000000000000
                 Size.Height = 40.000000000000000000
                 Size.PlatformDefault = False
                 TabOrder = 1
                 object LabelTrainRosterHeader: TLabel
                   Align = Client
-                  Size.Width = 153.000000000000000000
+                  Size.Width = 190.000000000000000000
                   Size.Height = 40.000000000000000000
                   Size.PlatformDefault = False
                   TextSettings.HorzAlign = Center
@@ -160,7 +222,7 @@ object LccThrottleAppForm: TLccThrottleAppForm
               CustomIcon = <
                 item
                 end>
-              IsSelected = True
+              IsSelected = False
               Size.Width = 41.000000000000000000
               Size.Height = 26.000000000000000000
               Size.PlatformDefault = False
@@ -168,13 +230,13 @@ object LccThrottleAppForm: TLccThrottleAppForm
               TabOrder = 0
               Text = 'Edit'
               object ToolBarTrainRosterEdit: TToolBar
-                Size.Width = 153.000000000000000000
+                Size.Width = 190.000000000000000000
                 Size.Height = 40.000000000000000000
                 Size.PlatformDefault = False
                 TabOrder = 1
                 object LabelTrainRosterEdit: TLabel
                   Align = Client
-                  Size.Width = 153.000000000000000000
+                  Size.Width = 190.000000000000000000
                   Size.Height = 40.000000000000000000
                   Size.PlatformDefault = False
                   TextSettings.HorzAlign = Center
@@ -223,7 +285,7 @@ object LccThrottleAppForm: TLccThrottleAppForm
       CustomIcon = <
         item
         end>
-      IsSelected = True
+      IsSelected = False
       Size.Width = 100.000000000000000000
       Size.Height = 49.000000000000000000
       Size.PlatformDefault = False
